--- a/Views/Home/Admin.cshtml
+++ b/Views/Home/Admin.cshtml
@@ -39,7 +39,7 @@
 </nav>
 <section class="sec4 py-5" id="artist-profile">
   <div class="container pt-3 d-flex flex-column align-items-center justify-content-center">
-   <img src="~/img/logo.png" style="width:18rem" alt="">
+   <img src="~/img/logo.png" class="admin-logo" alt="">
    <h1 class="font1 fw-bold mt-3">Store To Door</h1>
   </div>
 </section>
