--- a/Views/Home/EditUser.cshtml
+++ b/Views/Home/EditUser.cshtml
@@ -117,6 +117,7 @@
 
         @if (ViewBag.isArtist)
         {
+            
             <div class="form-outline mb-4">
                 <label class="form-label">Account Name</label>
                 <input type="text" class="form-control" value="@ViewBag.User.AccountName" name="AccountName" />
@@ -128,6 +129,6 @@
             </div>
         }
 
-      
+    <button type="submit" class="btn btn-primary btn-block mb-4">Update</button>
     </form>
 </div>
